@@ -2,14 +2,17 @@ package com.rdc.weflow_server.dto.checklist.response;
 
 import com.rdc.weflow_server.entity.checklist.ChecklistAnswer;
 import com.rdc.weflow_server.entity.checklist.ChecklistQuestion;
+import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.Getter;
+import lombok.NoArgsConstructor;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Getter
 @Builder
+@AllArgsConstructor
+@NoArgsConstructor
 public class QuestionResponse {
     private Long questionId;
     private String questionText;
@@ -18,18 +21,35 @@ public class QuestionResponse {
     private List<OptionResponse> options;
     private AnswerResponse answer;
 
-    public static QuestionResponse from(ChecklistQuestion question, ChecklistAnswer answer) {
-        return QuestionResponse.builder()
-                .questionId(question.getId())
-                .questionText(question.getQuestionText())
-                .questionType(question.getQuestionType().name())
-                .orderIndex(question.getOrderIndex())
-                .options(
-                        question.getOptions().stream()
-                                .map(OptionResponse::from)
-                                .collect(Collectors.toList())
-                )
-                .answer(answer != null ? AnswerResponse.from(answer) : null)
-                .build();
+    public QuestionResponse(ChecklistQuestion q, AnswerResponse answer) {
+        this.questionId = q.getId();
+        this.questionText = q.getQuestionText();
+        this.questionType = q.getQuestionType().name();
+        this.options = q.getOptions().stream()
+                .map(OptionResponse::from)
+                .toList();
+        this.answer = answer;
     }
+
+    public static QuestionResponse from(ChecklistQuestion q, List<ChecklistAnswer> answers) {
+
+        AnswerResponse answerResponse = null;
+
+        switch (q.getQuestionType()) {
+            case TEXT -> {
+                ChecklistAnswer textAnswer = answers.isEmpty() ? null : answers.get(0);
+                answerResponse = AnswerResponse.fromText(textAnswer);
+            }
+            case SINGLE -> {
+                ChecklistAnswer singleAnswer = answers.isEmpty() ? null : answers.get(0);
+                answerResponse = AnswerResponse.fromSingle(singleAnswer);
+            }
+            case MULTI -> {
+                answerResponse = AnswerResponse.fromMulti(answers);
+            }
+        }
+
+        return new QuestionResponse(q, answerResponse);
+    }
+
 }
